# bazel-repro-exec-log

./: .bazelrc  BUILD.bazel  ExampleTest.java  MODULE.bazel  README.bazel.md  maven_install.json
dir/: MODULE.bazel
