load("@contrib_rules_jvm//java:defs.bzl", "java_test_suite")
load("@rules_jvm_external//:defs.bzl", "artifact")

java_test_suite(
    name = "test",
    srcs = ["ExampleTest.java"],
    data = [":dir"],
    tags = [
        "external",
        "local",
    ],
    deps = [
        artifact("junit:junit"),
    ],
)

# java_junit5_test(
#     name = "ExampleTest",
#     srcs = ["ExampleTest.java"],
#     runtime_deps = [
#         artifact("org.junit.jupiter:junit-jupiter-engine"),
#     ],
#     deps = [
#         artifact("org.junit.jupiter:junit-jupiter-api"),
#         artifact("org.junit.platform:junit-platform-launcher"),
#         artifact("org.junit.platform:junit-platform-reporting"),
#     ],
# )

# checkstyle_test(
#     name = "example_test_checkstyle",
#     srcs = ["ExampleTest.java"],
# )
